gitops/infrastructure/argocd/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-virtualservice
  namespace: argocd
spec:
  hosts:
    - "lixiaojun.io"
  gateways:
    - istio-system/demo-gateway
  http:
    - match:
        - uri:
            prefix: "/argocd"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
